# LogicHive

./: .gitignore  ARCHITECTURE.md  Agent.md  COMPATIBILITY.md  LICENSE  README.md  logichive.db-shm  logichive.db-wal  pyproject.toml  run.bat  run.py  run_ui.bat
.github/: pull_request_template.md
.github/workflows/: cd.yml
ci_cd/: build_exe.py  deploy.bat  deploy_cloud.py
database/: diagnose_embeddings.py  fix_org_schema.py  populate_hub_with_real_logic.py  setup_org_hive.py  verify_v11_supabase.py
database/migrations/: 001_org_hive.sql  002_ai_evaluation.sql  003_tiered_billing.sql
dev_tools/testing/: verify_sandbox.py
docs/: LogicHiveの概念的要件定義書.md  LogicHiveの設計思想.md  REQUIREMENTS.md  VALUE_PROPOSITION.md  architecture_overview.md  edge_design.md  hub_design.md  saas_strategy.md  開発思想.md
docs/blog/: portfolio_publication_plan.md  why_indie_devs_should_avoid_b2b_in_ai_era.md  zenn_logichive_launch.md
docs/idea/: コミュニティ収益化戦略.md
docs/troubleshooting/: HUB_AND_EDGE_DIAGNOSIS_REPORT.md  MCP_CONNECTION_DIAGNOSIS_REPORT.md  STRIPE_CHECKOUT_INTEGRATION.md
exports/: README.md
exports/metadata/: HistoryManager_sqlite_v1_fixed.json  WhisperTranscriber_v1_faster.json  aether_project_registry_metadata.json  aether_translation_bridge_engine.json  audit_test_22348e8d_logic.json  audit_test_71dd3667_logic.json  audit_test_955e3629_logic.json  audit_test_f5b7cf42_logic.json  backup_test_function.json  calculate_code_hash.json  check_score_only.json  code_content_hasher_sha256.json  construct_search_document.json  contains_secrets_scanner.json  demo_rank_audit_trail_logger_with_rotation.json  demo_rank_json_formatter_logger.json  (+48 more)
scratch/: debug_aiosqlite.py  debug_db_deep.py  debug_hash.py  debug_uv_run.py  dogfood_exec.py  dogfooding_atoms.py  dogfooding_logic_verify.py  dogfooding_mocked.py  dogfooding_pure.py  dogfooding_run.py  final_proof.py  local_dogfood.py  repro_mock.py  rigorous_verify.py  sync_embeddings.py  sync_vectors.py  test_aiosqlite.py  test_aiosqlite_correct.py  test_async_save.py  test_parallel.py  test_reconnect.py  test_uv.py  unit_test_docker.py  verify_dogfood.py  verify_driver_switch.py  verify_fingerprint.py  verify_hardening.py  verify_ruff_fidelity.py  verify_timeout_fix.py  verify_transparency.py
scripts/: add_code_hash_column.py  calibrate_stripe.py  check_count.py  check_db.py  check_syntax.py  db_check.py  force_backup.py  migrate.py  mvp_audit.py  populate_vault.py  register_all_src.py  register_mcp.py  restore_backup.py  seed_library.py  setup_stripe.py  setup_stripe_products.py  verify_deps.py  verify_phase1_5.py  verify_plan_a.py  verify_quality.bat  verify_refinements.py
src/: mcp_server.py  orchestrator.py
tests/: conftest.py  run_concurrency_test.py  test_deletion.py  test_mcp_endpoints.py  test_vault_core.py
(+222 files in other folders)
