[project]
name = "logichive-hub"
version = "0.5.2"
description = "LogicHive: Private Hub Backend"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "httpx",
    "python-dotenv",
    "google-genai",
    "aiosqlite",
    "numpy",
    "ollama",
    "pytest",
    "pytest-asyncio",
    "pytest-mock",
    "python-dateutil",
    "fastmcp",
    "faiss-cpu",
    "radon",
    "ruff",
    "mypy",
    "stripe",
    "streamlit",
    "pandas",
    "pyinstaller",
    "psutil",
    "aiohttp>=3.13.5",
    "pydantic>=2.12.5",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["api", "core", "storage"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "UP",  # pyupgrade
]
ignore = ["E501"] # ignore line length (handled by formatter)

[tool.ruff.lint.isort]
known-first-party = ["api", "core", "storage"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true

[[tool.mypy.overrides]]
module = "flet.*"
ignore_missing_imports = true
